CHANGES WERE MADE

--- a/css.power.html
+++ b/css.power.html
@@ -15,16 +15,16 @@
     <div class="cards">
          <div class="card">
             <h2>Responsive Design</h2>
-            <p>This is the responsive design layout.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure distinctio mollitia ut deleniti amet molestiae molestias accusamus porro atque beatae officia est, recusandae aliquid aut ipsum culpa, nostrum nemo ad?This is the responsive design</p>
          </div>
 
          <div class="card">
             <h3>Hover effect</h3>
-            <p>This is going to show hover effects in css.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aut explicabo laboriosam aliquid qui! Quasi cumque ipsa dolore. Reiciendis error fuga enim voluptatum reprehenderit. Soluta saepe est dignissimos hic error?This is going to show hover effects in css.</p>
          </div>
          <div class="card">
             <h4>Animation</h4>
-            <p>This is going to show css. </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eligendi, quaerat delectus eos, autem labore praesentium enim placeat qui fugit rerum est necessitatibus nobis corporis distinctio mollitia nam similique. Earum?This is going to show css. </p>
          </div>
     </div>
 </body>
